SFDC/src/objects/Items_Sold__c.object
<CustomObject>
    <description>This is the list of Items sold in a &apos;Sale&apos; Transaction</description>
    <fields>
        <fullName>Jewellery_Code__c</fullName>
        <formula>Jewellery_Name__r.ProductCode</formula>
        <label>Jewellery Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jewellery_Name__c</fullName>
        <label>Jewellery Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Items Sold</relationshipLabel>
        <relationshipName>Items_Sold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <label>Sales</label>
        <referenceTo>Sales__c</referenceTo>
        <relationshipLabel>Items Sold</relationshipLabel>
        <relationshipName>Items_Sold</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <formula>Price__c  *  Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Items Sold</label>
    <nameField>
        <displayFormat>Item No. {00000000}</displayFormat>
        <label>Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items Sold</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>